# PUMA

./: .gitignore  Cargo.toml  LOGGING.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  CLEANUP.md  ENHANCEMENT.md  SUPPORT.md
.github/workflows/: rust-ci.yaml
hack/: README.md
hack/scripts/: test_api.sh
src/: lib.rs  main.rs
src/api/: chat.rs  completions.rs  mod.rs  models.rs  routes.rs  tests.rs
src/api/types/: request.rs  response.rs
src/backend/: engine.rs  mock.rs  mod.rs
src/cli/: cmds.rs  commands.rs  inspect.rs  ls.rs  mod.rs  rm.rs  serve.rs
src/downloader/: downloader.rs  huggingface.rs  mod.rs  ollama.rs  progress.rs
src/registry/: model_registry.rs
src/storage/: mod.rs  sqlite.rs  storage_trait.rs
src/system/: system_info.rs
src/util/: file.rs  format.rs  mod.rs  request.rs
src/utils/: file.rs  format.rs
tests/: api_test.rs  cli_test.rs  integration_test.rs
