[package]
name = "puma"
version = "0.0.1"
edition = "2021"
description = "A lightweight, high-performance inference engine for heterogeneous devices."
license = "Apache-2.0"

[dependencies]

clap = { version = "4.5.28", features = ["derive"] }
prettytable-rs = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
env_logger = "0.11.6"
log = "0.4.26"
