[package]
name = "puma"
version = "0.0.2"
edition = "2021"
description = "A lightweight, high-performance inference engine for local AI."
license = "Apache-2.0"

[dependencies]

clap = { version = "4.5.28", features = ["derive"] }
prettytable-rs = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
dirs = "6.0.0"
hf-hub = { version = "0.5.0", features = ["tokio"] }
colored = "2.1"
chrono = "0.4"
serde_json = "1.0"
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
regex = "1.11"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.12"
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
